Add fallback for config loading and better error handling

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,12 +20,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script>
       // Runtime configuration - will be replaced at container startup
-      window.APP_CONFIG = {
+      window.APP_CONFIG = window.APP_CONFIG || {
         GOOGLE_CLIENT_ID: 'REPLACE_WITH_GOOGLE_CLIENT_ID',
         API_URL: '/api'
       };
+      console.log('Initial config:', window.APP_CONFIG);
     </script>
-    <script src="%PUBLIC_URL%/config.js"></script>
+    <script src="%PUBLIC_URL%/config.js" onerror="console.log('Config.js failed to load, using inline config')"></script>
     <div id="root"></div>
   </body>
 </html> 
